# artifacts-dashboard

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_initial_tables.py  002_add_automation_tables.py  003_add_price_history_event_log.py  004_add_workflow_tables.py  005_add_app_errors_table.py  006_add_pipeline_tables.py  007_add_user_token_hash_to_app_errors.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  automations.py  bank.py  characters.py  dashboard.py  deps.py  errors.py  events.py  exchange.py  game_data.py  logs.py  pipelines.py  workflows.py  ws.py
backend/app/engine/: __init__.py  action_executor.py  cooldown.py  coordinator.py  manager.py  pathfinder.py  runner.py
backend/app/middleware/: error_handler.py
backend/app/models/: __init__.py  app_error.py  automation.py  character_snapshot.py  event_log.py  game_cache.py  pipeline.py  price_history.py  workflow.py
backend/app/schemas/: automation.py  errors.py  exchange.py  game.py  pipeline.py  workflow.py
backend/app/services/: analytics_service.py  artifacts_client.py  (+5 more)
backend/tests/: conftest.py  test_base_strategy.py  test_combat_strategy.py  test_cooldown.py  test_crafting_strategy.py  test_equipment_optimizer.py  test_gathering_strategy.py  test_heal_policy.py  test_leveling_strategy.py  test_monster_selector.py  test_pathfinder.py  test_resource_selector.py  test_task_strategy.py  test_trading_strategy.py
(+105 files in other folders)
